--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,14 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  injectable: ^0.4.0+1
+  get_it: ^4.0.2
+  shared_preferences: ^0.5.7+3
+  http: ^0.12.1
   flutter:
     sdk: flutter
 
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,7 +37,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
