--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  injectable: ^0.4.0+1
+  injectable: ^1.0.0
+  flutter_redux: ^0.6.0
+  redux: ^4.0.0+3
+  rxdart: ^0.24.1
   get_it: ^4.0.2
   shared_preferences: ^0.5.7+3
   http: ^0.12.1
