--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  socket_io_client: ^0.9.11
   injectable: ^1.0.0
   flutter_redux: ^0.6.0
   flutter_typeahead: ^1.8.7
